# SOKOBAN

./: CMakeLists.txt  README.md  multiplayer.cpp  source.cpp
backups/: CMakeLists-dziaa.txt  CMakeLists.txt  app  backup.cpp  backup2.cpp  open_gl.cpp  sokoban-test  source_backup_2020_03_09.cpp  source_backup_2020_03_8.cpp  test  test.cpp  wtf  wtf.cpp
backups/sfml_test/: app  source.cpp
backups/tst/: a.out  source.cpp  src.cpp
include/: libs.h  sokoban.h
levels/: all  minicosmos  run.sh
levels/ALL/: [14]Sasquatch_V_Levels 11  [14]Sasquatch_V_Levels 12  [14]Sasquatch_V_Levels 13  [14]Sasquatch_V_Levels 14  [14]Sasquatch_V_Levels 15  [14]Sasquatch_V_Levels 16  [14]Sasquatch_V_Levels 17  [14]Sasquatch_V_Levels 18  [14]Sasquatch_V_Levels 19  [14]Sasquatch_V_Levels 20  [14]Sasquatch_V_Levels 21  [14]Sasquatch_V_Levels 22  [14]Sasquatch_V_Levels 23  [14]Sasquatch_V_Levels 24  [14]Sasquatch_V_Levels 25  [14]Sasquatch_V_Levels 26  [14]Sasquatch_V_Levels 27  [14]Sasquatch_V_Levels 28  [14]Sasquatch_V_Levels 29  [14]Sasquatch_V_Levels 3  [14]Sasquatch_V_Levels 30  [14]Sasquatch_V_Levels 31  [14]Sasquatch_V_Levels 32  [14]Sasquatch_V_Levels 33  [14]Sasquatch_V_Levels 34  [14]Sasquatch_V_Levels 35  [14]Sasquatch_V_Levels 36  [14]Sasquatch_V_Levels 37  [14]Sasquatch_V_Levels 38  [14]Sasquatch_V_Levels 39  [14]Sasquatch_V_Levels 4  [14]Sasquatch_V_Levels 40  [14]Sasquatch_V_Levels 41  [14]Sasquatch_V_Levels 42  [14]Sasquatch_V_Levels 43  [14]Sasquatch_V_Levels 44  (+14 more)
source/: game_agent.cpp  key_boad.cpp  lvl.cpp  menu.cpp  obj.cpp  sound.cpp
textures/: sokoban.xcf
(+8 files in other folders)
